# Phan_mem_ban_hang_online

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
.github/workflows/: staging-preflight.yml
.superpowers/sdd/: autonomous-progress.md  final-review-package.md  progress-doc-gate-c.md  progress-go-live-wave.md  progress-harden-p0-p2.md  progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.md  task-2-brief.md  task-2-report.md  task-2-review-package.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-report.md  (+18 more)
backend/: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.oidc  fly.oidc.toml  fly.prod.toml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend_phan_mem_ban_hang_online/: .cursorignore  .gitignore  .gitnexusrc  AGENTS.md  CLAUDE.md  eslint.config.mjs  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.check.json  vitest.config.ts
backend_phan_mem_ban_hang_online/apps/ai-service/: pyproject.toml  requirements.txt
backend_phan_mem_ban_hang_online/apps/ai-service/app/: main.py
backend_phan_mem_ban_hang_online/apps/ai-service/tests/: conftest.py
frontend/: .dockerignore  AGENTS.md  CLAUDE.md  fly.ops.staging.toml  fly.web-admin.staging.toml  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
frontend_phan_mem_ban_hang_online/: .gitignore  CLAUDE.md  package.json  skills-lock.json  turbo.json
scripts/: deploy-staging.ps1
(+978 files in other folders)
