[project]
name = "ai-sales-ai-service"
version = "0.1.0"
description = "FastAPI AI service skeleton for the AI Sales Operating System."
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "uvicorn==0.51.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
